--- a/complete-layout/assets/css/style.css
+++ b/complete-layout/assets/css/style.css
@@ -37,6 +37,9 @@
   padding-right: 20px;
 }
 
+@media screen and (max-width: 575px) {
+}
+
 /* PRODUCT CARDS  */
 
 .subtitle {
@@ -44,7 +47,7 @@
   color: #5f2204;
   font-family: "Roboto", sans-serif;
   font-weight: 900;
-  margin: 24px;
+  margin: 37px;
 }
 
 .card {
@@ -53,7 +56,7 @@
   align-items: center;
   width: 273px;
   height: 335px;
-  border-radius: 80px;
+  border-radius: 45px;
   background-color: #fbf7e3;
   color: #5f2204;
   font-family: "Roboto", sans-serif;
@@ -114,6 +117,12 @@
   gap: 10px;
 }
 
+@media screen and (max-width: 575px) {
+  .subtitle {
+    text-align: center;
+  }
+}
+
 /* ARTICLE */
 .article {
   background-color: #fbf7e3;
@@ -121,6 +130,8 @@
   font-family: "Roboto", sans-serif;
   display: flex;
   padding: 20px;
+  margin: 15px;
+  border-radius: 45px;
 }
 
 .article__title {
