--- a/complete-layout/assets/css/style.css
+++ b/complete-layout/assets/css/style.css
@@ -1,4 +1,7 @@
 /* NAVIGATION BAR */
+:root {
+  --bar_width: 300px;
+}
 
 .main-nav {
   width: 100%;
@@ -157,5 +160,41 @@
   }
   .article__img {
     order: 1;
+  }
+}
+
+/* MEDIUM */
+@media screen and (min-width: 769px) {
+  .main-nav {
+    flex-direction: column;
+    height: 100vh;
+    width: var(--bar_width);
+    border-radius: 0;
+    gap: 15px;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+  }
+
+  .main-nav__item {
+    height: auto;
+    padding: 28px;
+    width: 50%;
+  }
+
+  .main-nav__item--big {
+    order: -1;
+    margin-top: 20px;
+  }
+
+  .cards-container,
+  .subtitle,
+  .article {
+    margin-left: var(--bar_width);
+  }
+
+  .card {
+    width: 273px;
+    height: 335px;
   }
 }
